# sys-sage

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  README.md  old_Makefile
.github/workflows/: main.yml
data-sources/: CMakeLists.txt  README.md  caps-numa-benchmark.cpp  hwloc-output.cpp
docs/: Concept.md  Doxyfile  Installation_Guide.md  index.md
docs/html/: _data_path_8hpp_source.html  _topology_8hpp_source.html  annotated.html  caps-numa-benchmark_8hpp_source.html  class_c_s_v_reader-members.html  class_c_s_v_reader.html  class_cache-members.html  class_cache.html  class_chip-members.html  class_chip.html  class_component-members.html  class_component.html  class_core-members.html  class_core.html  class_data_path-members.html  class_data_path.html  class_memory-members.html  class_memory.html  class_my__core__attributes-members.html  class_my__core__attributes.html  class_node-members.html  class_node.html  class_numa-members.html  class_numa.html  class_storage-members.html  class_storage.html  class_subdivision-members.html  class_subdivision.html  class_thread-members.html  class_thread.html  class_topology-members.html  class_topology.html  classes.html  dir_25205df789895db728d786a757b2675c.html  dir_6085fc52cade1896a6e68cf71ebe1b0a.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d28a4824dc47e487b107a5db32ef43c4.html  files.html  functions.html  functions_func.html  (+9 more)
docs/html/search/: all_0.js  all_1.js  all_2.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  variables_6.js
docs/latex/: _data_path_8hpp_source.tex  _topology_8hpp_source.tex  annotated.tex  caps-numa-benchmark_8hpp_source.tex  class_c_s_v_reader.tex  class_cache.eps  class_cache.tex  class_chip.eps  class_chip.tex  class_component.eps  class_component.tex  class_core.eps  class_core.tex  class_data_path.tex  class_memory.eps  class_memory.tex  class_my__core__attributes.tex  class_node.eps  class_node.tex  class_numa.eps  class_numa.tex  class_storage.eps  class_storage.tex  class_subdivision.eps  class_subdivision.tex  class_thread.eps  class_thread.tex  class_topology.eps  class_topology.tex  files.tex  hierarchy.tex  hwloc_8hpp_source.tex  refman.tex  structnuma__region.tex  sys-sage_8hpp_source.tex  xml__dump_8hpp_source.tex
examples/: CMakeLists.txt  basic_usage.cpp  bw.cpp  cccbenchplushwloc.cpp  cpu-frequency.cpp  custom_attributes.cpp  gpu-topo-parser.cpp  green_score.cpp  larger_topo.cpp  main.cpp  matmul.cpp  nvidia-mig.cpp  sys-sage-benchmarking.cpp
examples/custom_parser_musa/: main.cpp  musa_parser.cpp  musa_parser.hpp  trial.cpp  trial.h  use_custom_parser.cpp
examples/example_data/: bw.cpp  musa_custom_data_source.conf  pascal_gpu_topo.csv  skylake_caps_numa_benchmark.csv  skylake_hwloc.xml
pkg/: sys-sage-config.cmake.in
src/: CAT_aware.cpp  CMakeLists.txt  DataPath.cpp  DataPath.hpp  Makefile  Topology.cpp  Topology.hpp  cpuinfo.cpp  defines.hpp.in  hwloc.cpp  hwloc.hpp  main.cpp  nvidia_mig.cpp  sys-sage.hpp  sys-sage.hpp.in  sys-sage.pc.in  sys-topo.hpp  sys-topo.pc.in  xml_dump.cpp  xml_dump.hpp
src/parsers/: caps-numa-benchmark.cpp  caps-numa-benchmark.hpp  cccbench.cpp  cccbench.hpp  gpu-topo.cpp  gpu-topo.hpp  hwloc.cpp  hwloc.hpp
